<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/description_closing_image_button"
        android:src="@drawable/ic_close"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="25dp"
        android:layout_marginStart="24dp"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="311dp"
        android:layout_height="88dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginHorizontal="33dp"
        android:gravity="center_horizontal"
        android:text="Galaxy"
        android:textSize="50sp"
        android:fontFamily="@font/nunito_bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton2"
        android:layout_marginTop="55dp"
        tools:ignore="HardcodedText" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        android:layout_marginTop="35dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="@drawable/shape_rounded_containers"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="12dp"
                android:background="@drawable/shape_rounded_variants"
                android:gravity="center"
                android:text="1"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="Сломать"
                style="@style/TextViewVariantsStyle"
                tools:ignore="HardcodedText" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="18dp"
            android:background="@drawable/shape_rounded_containers"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="12dp"
                android:background="@drawable/shape_rounded_variants"
                android:gravity="center"
                android:text="2"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="Сон"
                style="@style/TextViewVariantsStyle"
                tools:ignore="HardcodedText" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="18dp"
            android:background="@drawable/shape_rounded_containers"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="12dp"
                android:background="@drawable/shape_rounded_variants"
                android:gravity="center"
                android:text="3"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="Галактика"
                style="@style/TextViewVariantsStyle"
                tools:ignore="HardcodedText" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="18dp"
            android:background="@drawable/shape_rounded_containers"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="12dp"
                android:background="@drawable/shape_rounded_variants"
                android:gravity="center"
                android:text="4"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="Утюг"
                style="@style/TextViewVariantsStyle"
                tools:ignore="HardcodedText" />


        </LinearLayout>


    </LinearLayout>

    <Button
        android:layout_width="310dp"
        android:layout_height="58dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/button_skip"
        android:backgroundTint="#2574FF"
        android:visibility="gone"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#0EAD69"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_height="150dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginTop="18dp"
            android:contentDescription="@string/description_correct_icon"
            android:src="@drawable/ic_correct"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_correct"
            android:fontFamily="@font/rubik_regular"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="@+id/imageView"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintTop_toTopOf="@+id/imageView"
            android:textSize="16sp"
            android:layout_marginStart="8dp"/>

        <android.widget.Button
            android:layout_width="331dp"
            android:layout_height="58dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="25dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            android:text="@string/button_continue"
            android:textSize="16sp"
            android:fontFamily="@font/nunito_bold"
            android:textColor="#0EAD69"
            android:backgroundTint="@android:color/white"
            android:background="@drawable/shape_button_footer"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>